--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -138,3 +138,30 @@ bind r source-file ~/.tmux.conf \; display-message "█▓░ ~/.tmux.conf reloa
 bind x kill-pane
 bind t set status
 bind a set-window-option synchronize-panes \; display-message "█▓░ synchronize"
+
+bind-key _ split-window -v
+bind-key | split-window -h
+
+bind-key h select-pane -L
+bind-key y select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind-key -r H resize-pane -L
+bind-key -r J resize-pane -D
+bind-key -r K resize-pane -U
+bind-key -r L resize-pane -R
+
+# plugin manager
+set -g @tpm_plugins ' \
+   tmux-plugins/tpm \
+   tmux-plugins/tmux-resurrect \
+   tmux-plugins/tmux-continuum \
+   tmux-plugins/tmux-copycat \
+   tmux-plugins/tmux-yank \
+   tmux-plugins/tmux-open \
+'
+
+set -g @continuum-restore 'on'
+
+run '~/.tmux/plugins/tpm/tpm'
